# argus

./: .gitignore  LICENSE  README.md  argus-test-valid-pdf.eml  index.html  package-lock.json  package.json  prview-test-valid-pdf.eml  specs.md  test_phishing.eml  test_phishing_attachment.eml  vite.config.js
src/: App.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: email_parser.rs  ioc_extractor.rs  lib.rs  main.rs  redactor.rs  test_parse.rs  threat_analyzer.rs
src/components/: AnalysisView.jsx  AttachmentPreview.jsx  ExportView.jsx  Header.jsx  ImportView.jsx  RecentAnalyses.jsx
src/utils/: emailParser.js  exporter.js  filePreview.js  iocExtractor.js  redactor.js  threatAnalyzer.js
