[package]
name = "prview"
version = "0.1.0"
description = "Phishing Email Analyzer"
authors = ["Prview Team"]
edition = "2021"

[lib]
name = "prview_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mailparse = "0.15"
regex = "1"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
url = "2"
once_cell = "1"

